# uText

./: .gitignore  CMakeLists.txt  README.md  build.sh
3dparty/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/resources/: res.qrc
app/src/: CMakeLists.txt  Editor.cpp  Editor.h  FileBrowser.cpp  FileBrowser.h  FileObserver.cpp  FileObserver.h  FileTab.cpp  FileTab.h  ObserverModel.cpp  ObserverModel.h  Panel.cpp  Panel.h  PopupDialog.cpp  PopupDialog.h  SaveDialog.cpp  SaveDialog.h  Test.cpp  Test.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  WindowManager.cpp  WindowManager.h  beforeCloseDialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  popup.ui
